appId: com.twitter.android
name: Twitter Android - Welcome Screen Test
---
- launchApp
- assertVisible: "Welcome"
- assertVisible: "Log in"
- tapOn: "Log in"
- assertVisible: "Phone, email address or username"
